421ce6118d162981a14d91b5c1af665c41028de9 Fix: Bootstrap 5 dark mode integration didn't show the info popover as dark
https://github.com/DataTables/Buttons/issues/210

Sync to source repo @421ce6118d162981a14d91b5c1af665c41028de9

--- a/css/buttons.jqueryui.css
+++ b/css/buttons.jqueryui.css
@@ -171,11 +171,6 @@ div.dt-button-collection span.dt-button-spacer.bar {
     box-shadow: none !important;
   }
 }
-html.dark div.dt-button-info {
-  background-color: var(--dt-html-background);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-}
-
 div.dt-buttons {
   position: relative;
   float: left;
